<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:orientation="vertical"
    android:paddingHorizontal="60dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"/>

            <EditText android:id="@+id/textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mon"
                        android:textSize="20sp"/>

                    <CheckBox android:id="@+id/checkBox_monday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tue"
                        android:textSize="20sp"/>

                    <CheckBox android:id="@+id/checkBox_tuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wed"
                        android:textSize="20sp"/>

                    <CheckBox android:id="@+id/checkBox_wednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thu"
                        android:textSize="20sp"/>

                    <CheckBox android:id="@+id/checkBox_thursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fri"
                        android:textSize="20sp"/>

                    <CheckBox android:id="@+id/checkBox_friday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sat"
                        android:textSize="20sp"/>

                    <CheckBox android:id="@+id/checkBox_saturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sun"
                        android:textSize="20sp"/>

                    <CheckBox android:id="@+id/checkBox_sunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"/>

            <EditText android:id="@+id/editText_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <Button android:id="@+id/button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dusty_rose"
                android:text="@string/done"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                />

        </LinearLayout>


    </ScrollView>

</LinearLayout>